# bewiseQuiz

./: Dockerfile  README.md  compose.yaml  requirements.txt
bewise/: pyvenv.cfg
core/: Dockerfile  Makefile  logger.yaml  pyproject.toml  requirements.txt
core/API/: app.py  questionApi.py
core/Common/: settings.py
core/Models/: QuestionModel.py
core/Repositories/: IRepository.py  InputData.py  MongoRepository.py
core/Services/: questionRequest.py
core/docker_compose/: app.yaml  storage.yaml
